# curb-detection

./: CMakeLists.txt  Curb-Detection.ipynb  README.md  crop_cloud.cpp  curb_detection_macos.yml  flatten_intensity.cpp  flatten_z.cpp
.ipynb_checkpoints/: Curb-Detection-checkpoint.ipynb
